--- a/Travel/templates/include/modal.html
+++ b/Travel/templates/include/modal.html
@@ -20,10 +20,11 @@
             <div class="modal-body mx-4">
                 <!--Body-->
           
-                <form class="modal-form">
+                <form class="modal-form" method="POST" action="{% url "akun:login" %}?next={{request.path|urlencode}}">
+                    {% csrf_token %}
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" name="email" class="form-control " placeholder="Masukkan Email Anda">
+                        <input type="text" name="username" class="form-control " placeholder="Masukkan Email Anda">
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
