--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -20,108 +20,14 @@
       </li>
      
     </ul>
-<<<<<<< HEAD
-    {% if user.is_authenticated %}
-        <a class="btn btn-login mr-5" href="{% url 'akun:logout' %}">KELUAR</a>
+      {% if user.is_authenticated %}
+        <a class="btn btn-login mr-5" href="{% url "akun:logout" %}">KELUAR</a>
         {% else %}
-        <button class="btn btn-login mr-5" data-toggle="modal" data-target="#modalLogin" >MASUK</button>
-    {% endif %}
-{#       href="{% url 'akun:login' %}?next={{request.path|urlencode}}" #}
-    {# {% include './modal.html' %} #}
-    {# {% load static %} #}
- <!-- Modal -->
- <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <!--Content-->
-        <div class="modal-content shadow-sm">
-           
-                <div class="text-center mr-3 mt-2">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-            <!-- </div> -->
-            <div class="modal-header justify-content-center border-bottom-0">
-              <img src="{% static 'images/logo-modal.png' %}" alt="Logo Modal">
-            </div>
-        
-            <!--Body-->
-            
-            <div class="modal-body mx-4">
-                <!--Body-->
-          
-                <form class="modal-form">
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" class="form-control " placeholder="Masukkan Email Anda">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control"  placeholder="Masukkan Password Anda">
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-login-modal mb-3 btn-rounded">Masuk</button>
-                        <p class="modal-login">Belum Punya Akun ? <a href="#ModalRegister">Register</a></p>
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <!--Content-->
-        <div class="modal-content shadow-sm ">
-            <!--Header-->
-            <div class="text-center mr-3 mt-2">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-          <!-- </div> -->
-          <div class="modal-header justify-content-center border-bottom-0">
-            <img src="images/logo-modal.png" alt="">
-          </div>
-            <!--Body-->
-            <div class="modal-body mx-4">
-                <!--Body-->
-
-                <form class="modal-form">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" name="username" class="form-control " placeholder="Masukkan Username Anda">
-                    </div>
-                    <div class="form-group">
-                      <label for="email">Email</label>
-                      <input type="email" name="email" class="form-control " placeholder="Masukkan Email Anda">
-                  </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control"  placeholder="Masukkan Password Anda">
-                    </div>
-                    <div class="form-group">
-                      <label for="password">Password</label>
-                      <input type="password" name="password" class="form-control"  placeholder="Masukkan Password Anda">
-                  </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-login-modal btn-rounded mb-3">Login</button>
-                        <p class="modal-login">Sudah Punya Akun ? <a href="#ModalLogin">Login</a></p>
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-  </div>
-=======
-   
         <button class="btn btn-login mr-5" data-toggle="modal" data-target="#modalLogin" href="#">MASUK</button>
+      {% endif %}
     
       
     </form>
     {% include './modal.html' %}
->>>>>>> 93bc1fbf581e3be5d3ec2f4278eeca1bce31dc55
   </div>
 </nav>
