--- a/Travel/Paket/templates/paket/viewPaket.html
+++ b/Travel/Paket/templates/paket/viewPaket.html
@@ -21,19 +21,16 @@
                  </nav>
              </div>
          </div>
-         <!-- <form action="">
-			<input type="text" name="search" placeholder="Search">
-			<input type="submit" value="Search">
-		</form > -->
+
 		<form action="{% url 'paket:search' %}">
          <div class="input-group">
 			<input 
-			class="form-control" 
-			type="text"
-			name="search" 
-			placeholder="Search" 
-			aria-label="Search">
-            <div class="input-group-append">
+    			class="form-control" 
+    			type="text"
+    			name="search" 
+    			placeholder="Search" 
+    			aria-label="Search">
+          <div class="input-group-append">
               <span >
 				  <button class="btn btn-search" type="submit">
 					<i class="fas fa-search icon-color"
@@ -44,21 +41,14 @@
 		  </div>
 		</form>   
     </div>
-    
     </section>
-	<!-- {% for i in paket_object %}
-	<h3>Nama Paket : {{i.nama_paket}}</h3>
-	<h4>Destinasi : {{i.destinasi}}</h4>
-	<p>{{i.about|truncatechars:15}} <a href="{% url 'paket:detail' i.slug %}">Selengkapnya</a></p>
-	{% for img in img_object %}
-		{% if img.id_paket.id == i.id %}
-			<img src="{{img.image.url}}" class="rounded-lg">
-		{% endif %}
-	{% endfor %}
-{% endfor %} -->
+
     <section class="section-package">
         <div class="container">
           <div class="row">
+          {% if error is not None %}
+            <h1>{{error}}</h1>
+          {% else %}
             {% for i in paket_object %}  
             <div class=" col-md-4 ">
               <div class="card-travel shadow-lg rounded" >
@@ -74,6 +64,7 @@
                 </div>
             </div>
                {% endfor %} 
+      {% endif %}
           </div>
         </div>
       </section>
