--- a/Travel/Transaksi/templates/transaksi/checkOut.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut.html
@@ -25,6 +25,7 @@
 			<label>Jumlah</label>
 			{{form.jumlah}}
 			<input type="hidden" name="{{form.paket.label}}" value={{data.slug}}>
+			<input type="hidden" name="{{form.user.label}}" value={{user.email}}>
 			<input type="submit">
 		</form>
 	</div>
