--- a/Travel/templates/include/modal.html
+++ b/Travel/templates/include/modal.html
@@ -12,7 +12,7 @@
               </div>
             <!-- </div> -->
             <div class="modal-header justify-content-center border-bottom-0">
-              <img src="{% static 'images/logo-modal.png' %}" alt="Logo Modal">
+              <img src="{% static 'images/logo_modal.png' %}" alt="Logo Modal">
             </div>
         
             <!--Body-->
@@ -53,7 +53,7 @@
             </div>
           <!-- </div> -->
           <div class="modal-header justify-content-center border-bottom-0">
-            <img src="images/logo-modal.png" alt="">
+            <img src="{% static "images/logo_modal.png" %}" alt="">
           </div>
             <!--Body-->
             <div class="modal-body mx-4">
