--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -25,9 +25,8 @@
         {% else %}
         <button class="btn btn-login mr-5" data-toggle="modal" data-target="#modalLogin" href="#">MASUK</button>
       {% endif %}
-    
-      
+
     </form>
-    {% include './modal.html' %}
+    {% include 'include/modal.html' %}
   </div>
 </nav>
