--- a/Travel/static/styles/main.css
+++ b/Travel/static/styles/main.css
@@ -316,4 +316,63 @@ p {
   background-color: #2dbac4;
   color: #fff;
 }
+
+.card-signin {
+  border: 0;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.card-signin .card-title {
+  margin-bottom: 2rem;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #0BA0AC;
+}
+
+.card-signin .card-img-left img {
+  width: 100%;
+  /* Link to your background image using in the property below! */
+  background-size: cover;
+}
+
+.form-signin {
+  width: 100%;
+}
+
+.form-signin .btn-register-login {
+  color: white;
+  background-color: #0BA0AC;
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.form-label-group {
+  justify-items: center;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-label-group input {
+  border-color: #0BA0AC;
+  width: 300px;
+  height: auto;
+  border-radius: 2rem;
+}
+
+a {
+  color: #0BA0AC;
+}
+
+a:hover {
+  color: #2dbac4;
+  text-decoration: none;
+}
 /*# sourceMappingURL=main.css.map */
