--- a/Travel/static/styles/main.scss
+++ b/Travel/static/styles/main.scss
@@ -337,3 +337,70 @@ p{
         color: #fff;
     }
 }
+
+.card-signin {
+      
+    .card-title {
+        margin-bottom: 2rem;
+        font-weight: 400;
+        font-size: 1.5rem;
+        color: $maincolor;
+      }
+    border: 0;
+    border-radius: 1rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  .card-img-left {
+      img{
+        width: 100%;
+        /* Link to your background image using in the property below! */
+        
+        background-size: cover;
+      }
+    
+  }
+}
+  
+ 
+  
+  .form-signin {
+    width: 100%;
+  }
+  
+  .form-signin {
+      
+    .btn-register-login {
+        color: white;
+        background-color: $maincolor;
+        font-size: 80%;
+        border-radius: 5rem;
+        letter-spacing: .1rem;
+        font-weight: bold;
+        padding: 1rem;
+        transition: all 0.2s;
+      }
+  }
+  
+  .form-label-group {
+      justify-items: center;
+     
+    position: relative;
+    margin-bottom: 1rem;
+  }
+  
+  .form-label-group {
+    input {
+    border-color: $maincolor;
+    width: 300px;
+    height: auto;
+    border-radius: 2rem;
+  }
+}
+a{
+    color: $maincolor;
+    &:hover{
+        color: $hovercolor;
+        text-decoration: none;
+    }
+}
+
