--- a/Travel/userManage/templates/User/createUser.html
+++ b/Travel/userManage/templates/User/createUser.html
@@ -1,16 +1,79 @@
 {% load static %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    
+	{% include 'include/css.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>{{title}}</title>
-</head>
-<body>
-	<form method="post" autocomplete="off">
-	{% csrf_token %}
-	{{form.as_p}}
-	<input type="submit" value='Create'>
-	{{error}}
-	</form>
-</body>
+    <title>Register</title>
+  </head>
+  
+ 
+
+
+
+  <body>
+	<main>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto my-5">
+          <div class="card card-signin flex-row my-5">
+            <div class="card-img-left d-none d-md-flex">
+              <img src="{% static 'images/register.png' %}">
+            </div>
+            <div class="card-body mx-5 text-center ">
+              <img src="{% static 'images/logo-register.png' %}" class="mb-3">
+              <!-- <h5 class="card-title text-center">REGISTER</h5> -->
+              <form class="form-signin justify-content-center">
+                <div class="form-label-group">
+                  <input type="text" id="inputUserame" class="form-control" placeholder="Username" required autofocus>
+                 
+                </div>
+  
+                <div class="form-label-group">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+                 
+                </div>
+                
+                <hr>
+  
+                <div class="form-label-group">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  
+                </div>
+                
+                <div class="form-label-group">
+                  <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" required>
+              
+                </div>
+  
+                <button class="btn btn-register-login btn-block text-uppercase" type="submit">Register</button>
+                <a class=" d-block text-center mt-2 " href="#">Sign In</a>
+               
+                
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+	</div>
+</main>
+{% include 'include/js.html' %}
+  </body>
+  
+
+
+
+
+
+<!-- Modal Checkout -->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
+  
 </html>
