--- a/Travel/templates/include/modal.html
+++ b/Travel/templates/include/modal.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-login-modal mb-3 btn-rounded">Masuk</button>
-                        <p class="modal-login">Belum Punya Akun ? <a href="#ModalRegister">Register</a></p>
+                        <p class="modal-login">Belum Punya Akun ? <a href="{% url "akun:regis" %}">Register</a></p>
                     </div>
 
                 </form>
