--- a/Travel/userManage/templates/User/createUser.html
+++ b/Travel/userManage/templates/User/createUser.html
@@ -4,18 +4,10 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
 	{% include 'include/css.html' %}
-
     <title>Register</title>
   </head>
-  
- 
-
-
-
   <body>
 	<main>
     <div class="container">
@@ -28,27 +20,33 @@
             <div class="card-body mx-5 text-center ">
               <img src="{% static 'images/logo-register.png' %}" class="mb-3">
               <!-- <h5 class="card-title text-center">REGISTER</h5> -->
-              <form class="form-signin justify-content-center">
+              <form method="POST" autocomplete="off" class="form-signin justify-content-center">
+                {% csrf_token %}
                 <div class="form-label-group">
-                  <input type="text" id="inputUserame" class="form-control" placeholder="Username" required autofocus>
-                 
+                  {{form.username}}
+{#                   <input type="text" id="{{form.username.id_for_label}}" name="{{form.username.name}}" class="form-control" placeholder="Username" required autofocus> #}
+                  
                 </div>
   
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+                  {{form.email}}
+                  {# <input type="email" id="inputEmail" name="{{form.email.name}}" class="form-control" placeholder="Email address" required> #}
                  
                 </div>
                 
                 <hr>
   
                 <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  {{form.password1}}
+                  {# <input type="password" id="{{form.password1.id_for_label}}" name="{{form.password1.name}}" class="form-control" placeholder="Password" required> #}
                   
+
                 </div>
                 
                 <div class="form-label-group">
-                  <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" required>
-              
+                  {{form.password2}}
+                  {# <input type="password" id="{{form.password2.id_for_label}}" name="{{form.password2.name}}" class="form-control" placeholder="Confirm Password" required> #}
+                  <p>{{form.errors}}</p>
                 </div>
   
                 <button class="btn btn-register-login btn-block text-uppercase" type="submit">Register</button>
