--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -30,6 +30,7 @@
 		</form>
 	</div>
 	<button id="pay-button">Pay!</button>
+	{# <a href="{% url "home" %}" id="pay-button">Pay!</a>  #}
     <pre><div id="result-json">JSON result will appear here after payment:<br></div></pre>
 	
 	<script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-EOjbQuFJwheGValW">
@@ -43,7 +44,8 @@
         snap.pay(token, {
           // Optional
           onSuccess: function(result){
-            /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, null, 2);
+          	console.log('Success');
+            /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, 'http://127.0.0.1:8000/', 2);
           },
           // Optional
           onPending: function(result){
