--- a/Travel/templates/include/modal.html
+++ b/Travel/templates/include/modal.html
@@ -24,11 +24,11 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="text" name="username" class="form-control " placeholder="Masukkan Email Anda">
+                        <input type="text" name="username" class="form-control " placeholder="Username Or Email address">
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control"  placeholder="Masukkan Password Anda">
+                        <input type="password" name="password" class="form-control"  placeholder="Password">
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-login-modal mb-3 btn-rounded">Masuk</button>
