--- a/Travel/userManage/templates/User/login.html
+++ b/Travel/userManage/templates/User/login.html
@@ -23,29 +23,23 @@
         <div class="col-lg-10 col-xl-9 mx-auto my-5">
           <div class="card card-signin flex-row my-5">
             <div class="card-img-left d-none d-md-flex">
-              <img src="{% include 'images/register.png %}">
+              <img src="{% static "images/register.png" %}">
             </div>
             <div class="card-body mx-5 my-auto text-center ">
               <img src="{% static 'images/logo-register.png' %}" class="mb-4">
-              <form class="form-signin justify-content-center">
+              <form class="form-signin justify-content-center" method="POST" action="{% url "akun:login" %}" autocomplete="off">
+                {% csrf_token %}
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
-                 
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Username Or Email address" name="username" required>
                 </div>
                 
-             
-  
                 <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" required>
                 </div>
-  
+                <p>{{form.error}}</p>
                 <button class="btn btn-register-login btn-block text-uppercase" type="submit">Login</button>
-                <a class=" d-block text-center mt-2 " href="#">Register</a>
-                
-               
-                
               </form>
+                <a class=" d-block text-center mt-2 " href="{% url "akun:regis" %}">Register</a>
             </div>
           </div>
         </div>
