--- a/Travel/Paket/templates/paket/detailPaket.html
+++ b/Travel/Paket/templates/paket/detailPaket.html
@@ -39,7 +39,7 @@
 							{% with object.images.all|first as pertama %}
 							<div class="xzoom-container">
 								   <img 
-									src="{{pertama.getImage}}" 
+									src="{{pertama.url}}" 
 									class="xzoom"
 									id="xzoom-default"
 									xoriginal="{{pertama.id}}"> 
