--- a/Travel/Paket/templates/paket/search.html
+++ b/Travel/Paket/templates/paket/search.html
@@ -13,7 +13,7 @@
 		<br>
 		{% for pic in img %}
 			{% if pic.id_paket == i %}
-				<img src="{{pic.getImage}}">
+				<img src="{{pic.url}}">
 			{% endif %}
 		{% endfor %}
 
