--- a/Travel/Paket/templates/paket/viewPaket.html
+++ b/Travel/Paket/templates/paket/viewPaket.html
@@ -55,7 +55,7 @@
                 <div class="card-travel shadow-lg rounded" >
                     <div class="card-body">
                       {% with i.images.all|first as img_pertama %}
-                      <img class="card-img-top" src="{{img_pertama.getImage}}" height="200px" alt="Card image cap">
+                      <img class="card-img-top" src="{{img_pertama.url}}" height="200px" alt="Card image cap">
                       {% endwith %}
                       <h5 class="card-title">{{i.nama_paket}}</h5>
                       <p class="card-text">{{i.destinasi}}</p>
