edit error message

--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -30,7 +30,7 @@
 		</form>
 	</div>
 	<button id="pay-button">Pay!</button>
-	{# <a href="{% url "home" %}" id="pay-button">Pay!</a>  #}
+	{# <a href="{% url 'home' %}" id="pay-button">Pay!</a>  #}
     <pre><div id="result-json">JSON result will appear here after payment:<br></div></pre>
 	
 	<script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-EOjbQuFJwheGValW">
