--- a/Travel/Paket/templates/paket/search.html
+++ b/Travel/Paket/templates/paket/search.html
@@ -4,7 +4,7 @@
 {% block content %}
 	<h2>Home / Travel Package</h2>
 	{% if error is not None %}
-		<h1>{{error}}</h1>
+		<h1 class="text-error">{{error}}</h1>
 	{% endif %}
 	<br>
 	{% for i in object_list %}
