--- a/Travel/Paket/templates/paket/viewPaket.html
+++ b/Travel/Paket/templates/paket/viewPaket.html
@@ -44,11 +44,14 @@
     </div>
     </section>
 
-    <section class="section-package">
+    <section class="section-package ">
         <div class="container">
           <div class="row">
           {% if error is not None %}
-            <h1>{{error}}</h1>
+          <div class="error-message">
+            <h1 class="text-error mt-5">{{error}}</h1>
+          </div>
+            
           {% else %}
             {% for i in paket_object %}  
               <div class=" col-md-4 ">
