--- a/Travel/userManage/templates/User/login.html
+++ b/Travel/userManage/templates/User/login.html
@@ -23,14 +23,14 @@
         <div class="col-lg-10 col-xl-9 mx-auto my-5">
           <div class="card card-signin flex-row my-5">
             <div class="card-img-left d-none d-md-flex">
-              <img src="{% static "images/register.png" %}">
+              <img src="{% static 'images/register.png' %}">
             </div>
             <div class="card-body mx-5 my-auto text-center ">
               <img src="{% static 'images/logo-register.png' %}" class="mb-4">
               <form class="form-signin justify-content-center" method="POST" action="{% url "akun:login" %}?next={{next}}" autocomplete="off">
                 {% csrf_token %}
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Username Or Email address" name="username" required>
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Username / Email address" name="username" required>
                 </div>
                 
                 <div class="form-label-group">
