--- a/Travel/userManage/templates/User/login.html
+++ b/Travel/userManage/templates/User/login.html
@@ -30,7 +30,7 @@
               <form class="form-signin justify-content-center" method="POST" action="{% url "akun:login" %}?next={{next}}" autocomplete="off">
                 {% csrf_token %}
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Username / Email address" name="username" required>
+                  <input type="text" id="inputEmail" class="form-control" placeholder="Username / Email address" name="username" required>
                 </div>
                 
                 <div class="form-label-group">
