--- a/Travel/Paket/templates/paket/viewPaket.html
+++ b/Travel/Paket/templates/paket/viewPaket.html
@@ -53,12 +53,12 @@
           </div>
             
           {% else %}
-            {% for i in paket_object %}  
+            {% for i in paket_object %}
               <div class=" col-md-4 ">
                 <div class="card-travel shadow-lg rounded" >
                     <div class="card-body">
                       {% with i.images.all|first as img_pertama %}
-                      <img class="card-img-top" src="{{img_pertama.url}}" height="200px" alt="Card image cap">
+                      <img class="card-img-top" src="{{img_pertama.getImage}}" height="200px" alt="Card image cap">
                       {% endwith %}
                       <h5 class="card-title">{{i.nama_paket}}</h5>
                       <p class="card-text">{{i.destinasi}}</p>
