--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-  <a class="navbar-brand ml-5" href="#">
+  <a class="navbar-brand ml-5" href="{% url "home" %}">
     <img src="{% static '/images/Logo.png' %}" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
