--- a/Travel/static/styles/main.scss
+++ b/Travel/static/styles/main.scss
@@ -89,9 +89,11 @@ header{
     margin-top: 50px;
     .card-body{
         min-height: 200px;
+        border-radius: 20px;
         .card-title{
             font-size: 30px;
             font-weight: bold;
+
         }
         
         img{
@@ -411,6 +413,8 @@ a{
     }
 }
 
-.error-message h1{
+.text-error{
+ h1{
     font-size: 50px;
+}
 }
