--- a/Travel/static/styles/main.scss
+++ b/Travel/static/styles/main.scss
@@ -18,6 +18,7 @@ body{
     color : #ffffff;
     width: 100px;
     font-weight: bold;
+  
     &:hover{
         background-color: $hovercolor;
         color : #ffffff;
@@ -109,7 +110,7 @@ header{
             width: 100px;
             background-color: $maincolor ;
             color: white;
-            border-radius: 15px;
+            // border-radius: 15px;
             &:hover{
                 background-color: $hovercolor;
                 color : #ffffff;
@@ -140,7 +141,7 @@ header{
         width: 100px;
         background-color: $maincolor ;
         color: white;
-        border-radius: 15px;
+        // border-radius: 15px;
         &:hover{
             background-color: $hovercolor;
             color : #ffffff;
@@ -443,7 +444,7 @@ a{
 }
 
 .text-error{
- h1{
     font-size: 50px;
-}
+    color: #5a5959;
+    
 }
