--- a/Travel/Transaksi/templates/transaksi/checkOut_success.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_success.html
@@ -6,7 +6,21 @@
 	{% include 'include/css.html' %}
 </head>
 <body>
-	{% include 'include/navbar.html' %}
-	<h1>SUCCESS</h1>
+	<div class=" d-flex align-items-center mt-5">
+        <div class="col text-center">
+            <img src="{% static 'images/checkout.png' %}" alt="">
+            <h1>
+               Hore! Pemesanan Anda Sukses
+            </h1>
+            <p>
+                Enjoy Your Vacation, Thank You
+            </p>
+            <a href="#" class="btn btn-home-page mt-3 px-3">
+                Home Page
+            </a>
+            
+        </div>
+    </div>
+</main>
 </body>
 </html>
