--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -28,42 +28,45 @@
         <div class="col text-center">
             <img src="{% static 'images/payment.jpg' %}" width="500px" alt="">
             <h1>
-               Yuk! Tinggal Satu Langkah Lagi 
+               Yuk! Tinggal Satu Langkah Lagi
             </h1>
             <p>
                 Kamu dapat menikmati perjalanan yang kamu impikan
             </p>
-            <a href="" id="pay-button" class="btn btn-payment mt-3 px-3">
+            <button href="" id="pay-button" class="btn btn-payment mt-3 px-3">
                 BAYAR
-            </a>
-            
+            </button>
+            {# <button id="pay-button">Pay!</button> #}
         </div>
     </div>
 </main>
 	{# <a href="{% url 'home' %}" id="pay-button">Pay!</a>  #}
     {# <pre><div id="result-json">JSON result will appear here after payment:<br></div></pre> #}
 	
-	<script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-EOjbQuFJwheGValW">
-	
-	</script>
+	<script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-EOjbQuFJwheGValW"></script>
     <script type="text/javascript">
-    	console.log('ini token : {{token}}');
-    	// var token = "{{token}}"
+    	var token = "{{object.token}}"
       document.getElementById('pay-button').onclick = function(){
         // SnapToken acquired from previous step
-        snap.pay({
+        snap.pay(token, {
           // Optional
           onSuccess: function(result){
-          	console.log('Success');
-            /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, 'http://127.0.0.1:8000/', 2);
+          	console.log("Success : " + result);
+            // /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, null, 2);
+            alert("Success accepted \r\n"+JSON.stringify(result));
           },
           // Optional
           onPending: function(result){
-            /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, null, 2);
+            console.log("Pending : " + result);
+            // /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, null, 2);
+            alert("Payment accepted \r\n"+JSON.stringify(result));
+            location.href = "/checkOut/success/?token=" + token;
           },
           // Optional
           onError: function(result){
-            /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, null, 2);
+            console.log("Error : " + result);
+            // /* You may add your own js here, this is just example */ document.getElementById('result-json').innerHTML += JSON.stringify(result, 'http://127.0.0.1:8000/', 2);
+            alert("Error accepted \r\n"+JSON.stringify(result));
           }
         });
       };
