--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{% include 'include/css.html' %}
-	<title>{{title}}</title>
+	<title>CHECKOUT FINAL</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light shadow-sm">
@@ -28,20 +28,19 @@
         <div class="col text-center">
             <img src="{% static 'images/payment.jpg' %}" width="500px" alt="">
             <h1>
-               Yuk! Tinggal Satu Langkah Lagi
+               {# Yuk! Tinggal Satu Langkah Lagi #}
+               {{status}}
             </h1>
             <p>
-                Kamu dapat menikmati perjalanan yang kamu impikan
+                {# Kamu dapat menikmati perjalanan yang kamu impikan #}
+                {{body}}
             </p>
             <button href="" id="pay-button" class="btn btn-payment mt-3 px-3">
                 BAYAR
             </button>
-            {# <button id="pay-button">Pay!</button> #}
         </div>
     </div>
 </main>
-	{# <a href="{% url 'home' %}" id="pay-button">Pay!</a>  #}
-    {# <pre><div id="result-json">JSON result will appear here after payment:<br></div></pre> #}
 	
 	<script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-EOjbQuFJwheGValW"></script>
     <script type="text/javascript">
