--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -35,6 +35,7 @@
                 {# Kamu dapat menikmati perjalanan yang kamu impikan #}
                 {{body}}
             </p>
+            <p>{{object.token}}</p>
             <button href="" id="pay-button" class="btn btn-payment mt-3 px-3">
                 BAYAR
             </button>
