--- a/Travel/Transaksi/templates/transaksi/checkOut_Final.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_Final.html
@@ -10,35 +10,30 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-		<a class="navbar-brand ml-5" href="#">
+		<a class="navbar-brand ml-5" href="{% url "home" %}">
 		  <img src="{%static 'images/logo.png' %}" alt="">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
-	  
-	   
 	  </nav>
-
-	
 <main>
 
-   
     <div class="d-flex align-items-center mt-2">
         <div class="col text-center">
             <img src="{% static 'images/payment.jpg' %}" width="500px" alt="">
-            <h1>
-               {# Yuk! Tinggal Satu Langkah Lagi #}
-               {{status}}
-            </h1>
-            <p>
-                {# Kamu dapat menikmati perjalanan yang kamu impikan #}
-                {{body}}
-            </p>
-            <p>{{object.token}}</p>
-            <button href="" id="pay-button" class="btn btn-payment mt-3 px-3">
-                BAYAR
-            </button>
+            {% block bodyContent %}
+              <h1>
+                 {# Yuk! Tinggal Satu Langkah Lagi #}
+                 {{status}}
+              </h1>
+              <p>
+                  {# Kamu dapat menikmati perjalanan yang kamu impikan #}
+                  {{body}}
+              <button href="" id="pay-button" class="btn btn-payment mt-3 px-3">
+                  BAYAR
+              </button>
+            {% endblock bodyContent %}
         </div>
     </div>
 </main>
