--- a/Travel/Transaksi/templates/transaksi/checkOut_success.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut_success.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{% include 'include/css.html' %}
+    <title>CHECKOUT SUCCESS</title>
 </head>
 <body>
 	<div class=" d-flex align-items-center mt-5">
@@ -16,7 +17,7 @@
             <p>
                 Enjoy Your Vacation, Thank You
             </p>
-            <a href="#" class="btn btn-home-page mt-3 px-3">
+            <a href="{% url "home" %}" class="btn btn-home-page mt-3 px-3">
                 Home Page
             </a>
             
